
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
__attribute__((used)) static inline int
fatal_error(int err)
{
 switch (err) {



  case 128:
   return 0;
 }
 return 1;
}
